--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,4 +10,4 @@ jobs:
     runs-on: prabhatrunner
     steps:
       - name: build step
-        run: terraform init
+        run: echo "terraform init"
