--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,6 +7,23 @@ pool:
   name: prabhatpool1
 variables:
   ps12: prabhat1234
+parameters:
+  - name: prabhatinit
+    displayName: run init?
+    type: boolean 
+    default: false 
+  - name: prabhatfmt
+    displayName: run fmt?
+    type: boolean 
+    default: false 
+  - name: prabhatvalidate
+    displayName: run validate?
+    type: boolean 
+    default: false
+  - name: prabhatplan
+    displayName: run plan?
+    type: boolean 
+    default: false 
 stages:
     - stage: buildstage
       displayName: build stage
@@ -17,40 +34,45 @@ stages:
             - task: TerraformInstaller@1
               inputs:
                 terraformVersion: 'latest'
-            - task: TerraformTask@5
-              displayName: terraform init
-              inputs:
-                provider: 'azurerm'
-                command: 'init'
-                workingDirectory: '$(System.DefaultWorkingDirectory)/environment/dev'
-                backendServiceArm: '$(ps12)'
-                backendAzureRmResourceGroupName: 'prod2908'
-                backendAzureRmStorageAccountName: 'prodstorage2908'
-                backendAzureRmContainerName: 'prodcontainer2809'
-                backendAzureRmKey: 'prod.tfstate'
-            - task: TerraformTask@5
-              displayName: terraform fmt
-              inputs:
-                provider: 'azurerm'
-                command: 'custom'
-                workingDirectory: '$(System.DefaultWorkingDirectory)/environment/dev'
-                outputTo: 'console'
-                customCommand: 'fmt'
-                environmentServiceNameAzureRM: $(ps12)
-            - task: TerraformTask@5
-              displayName: terraform validate
-              inputs:
-                provider: 'azurerm'
-                command: 'validate'
-                workingDirectory: '$(System.DefaultWorkingDirectory)/environment/dev'
-            - task: TerraformTask@5
-              displayName: terraform plan
-              inputs:
-                provider: 'azurerm'
-                command: 'plan'
-                workingDirectory: '$(System.DefaultWorkingDirectory)/environment/dev'
-                environmentServiceNameAzureRM: '$(ps12)'
-            
+            - ${{ if eq(parameters.prabhatinit, true) }}:
+              - task: TerraformTask@5
+                displayName: terraform init
+                inputs:
+                  provider: 'azurerm'
+                  command: 'init'
+                  workingDirectory: '$(System.DefaultWorkingDirectory)/environment/dev'
+                  backendServiceArm: $(ps12)
+                  backendAzureRmResourceGroupName: 'prod2908'
+                  backendAzureRmStorageAccountName: 'prodstorage2908'
+                  backendAzureRmContainerName: 'prodcontainer2809'
+                  backendAzureRmKey: 'prod.tfstate'
+            - ${{ if eq(parameters.prabhatfmt, true) }}:
+              - task: TerraformTask@5
+                displayName: terraform fmt
+                inputs:
+                  provider: 'azurerm'
+                  command: 'custom'
+                  workingDirectory: '$(System.DefaultWorkingDirectory)/environment/dev'
+                  outputTo: 'console'
+                  customCommand: 'fmt'
+                  environmentServiceNameAzureRM: $(ps12)
+            - ${{ if eq(parameters.prabhatvalidate, true) }}:
+              - task: TerraformTask@5
+                displayName: terraform validate
+                inputs:
+                  provider: 'azurerm'
+                  command: 'validate'
+                  workingDirectory: '$(System.DefaultWorkingDirectory)/environment/dev'
+            - ${{ if eq(parameters.prabhatinit, true) }}:
+              - task: TerraformTask@5
+                displayName: terraform plan
+                inputs:
+                  provider: 'azurerm'
+                  command: 'plan'
+                  workingDirectory: '$(System.DefaultWorkingDirectory)/environment/dev'
+                  environmentServiceNameAzureRM: $(ps12)
+
+                
             
                 
               
