--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -40,7 +40,7 @@ stages:
                 inputs:
                   provider: 'azurerm'
                   command: 'init'
-                  workingDirectory: '$(System.DefaultWorkingDirectory)/environment/dev'
+                  workingDirectory: '$(System.DefaultWorkingDirectory)\environment\dev'
                   backendServiceArm: $(ps12)
                   backendAzureRmResourceGroupName: 'newrg'
                   backendAzureRmStorageAccountName: 'newstorages123'
@@ -52,7 +52,7 @@ stages:
                 inputs:
                   provider: 'azurerm'
                   command: 'custom'
-                  workingDirectory: '$(System.DefaultWorkingDirectory)/environment/dev'
+                  workingDirectory: '$(System.DefaultWorkingDirectory)\environment\dev'
                   outputTo: 'console'
                   customCommand: 'fmt'
                   environmentServiceNameAzureRM: $(ps12)
@@ -62,14 +62,14 @@ stages:
                 inputs:
                   provider: 'azurerm'
                   command: 'validate'
-                  workingDirectory: '$(System.DefaultWorkingDirectory)/environment/dev'
+                  workingDirectory: '$(System.DefaultWorkingDirectory)\environment\dev'
             - ${{ if eq(parameters.prabhatinit, true) }}:
               - task: TerraformTask@5
                 displayName: terraform plan
                 inputs:
                   provider: 'azurerm'
                   command: 'plan'
-                  workingDirectory: '$(System.DefaultWorkingDirectory)/environment/dev'
+                  workingDirectory: '$(System.DefaultWorkingDirectory)\environment\dev'
                   environmentServiceNameAzureRM: $(ps12)
 
                 
